--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -1,7 +1,8 @@
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-02-15
+Fabian Ehrentraud, 2011-02-18
 e0725639@mail.student.tuwien.ac.at
+Licensed under the Open Software License (OSL 3.0)
 */
 
 /*
