--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -1,6 +1,6 @@
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-02-20
+Fabian Ehrentraud, 2011-02-21
 e0725639@mail.student.tuwien.ac.at
 Licensed under the Open Software License (OSL 3.0)
 */
@@ -202,7 +202,7 @@ h2, h3, h4, #meta .list-header {
 	display: none !important;
 }
 
-#content[hideempty~="true"] [nolvas~="true"], #content[hideempty="true"][nolvas~="true"] {
+#content[hideempty~="true"] [nolvas~="true"], #content[hideempty="true"][nolvas~="true"], #content[hideempty~="true"] [nolvas_static~="true"], #content[hideempty="true"][nolvas_static~="true"] {
 	display: none;
 }
 
