--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -1,6 +1,8 @@
+@charset "utf-8";
+
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-02-26
+Fabian Ehrentraud, 2011-02-27
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -12,7 +14,6 @@ TODO
 	make shown down-arrow next to headers dynamic according to collapse state
 */
 
-@charset "utf-8";
 
 body {
 	font-family: arial, helvetica, sans-serif;
@@ -76,12 +77,16 @@ h4 {
 }
 
 h4:before {
-	content: "* "
+	content: "* ";
 }
 
 a {
 	text-decoration: none;
-	color: #70C;
+	/*color: #70C;*/
+	color: #00d;
+}
+a:hover {
+	text-decoration: underline;
 }
 
 strong {
@@ -118,7 +123,7 @@ li {
 
 #meta {
 	background-color: #DDD;
-	padding: 1em
+	padding: 1em;
 }
 
 #meta p, #meta div {
@@ -167,7 +172,7 @@ h2, h3, h4, #meta .list-header {
 }
 
 .version {
-	color: grey;
+	color: gray;
 	font-style: italic;
 }
 
@@ -290,11 +295,11 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 }
 
 .nolvas {
-	color: darkred;
+	color: maroon;
 }
 
 .currentlva {
-	background-color: #c0e607
+	background-color: #c0e607;
 }
 
 .probableLva {
@@ -326,12 +331,30 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 	width: 10em;
 }
 .lvas table .lvainfo {
-	min-width: 0px;
-	/*width: 10px;*/
+	width: 12em;
+}
+.lvas table .lvainfo_empty {
+	width: 0;
+	padding: 0;
+	margin: 0;
 }
 
 *[data-noPrint~="true"] {
-	opacity: 0.6;
+	opacity: 0.6; /*this is CSS3, supported by Opera, Firefox, Chrome and Safari*/
+}
+
+#footer {
+	background-color: #DDD;
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+#footer span + span {
+	float: right;
 }
 
 @media print {
@@ -389,7 +412,7 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 		content: "";
 	}
 	
-	*[data-noPrint~="true"], #meta .controls {
+	*[data-noPrint~="true"], #meta .controls, #footer {
 		display: none;
 	}
 	
