--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -2,7 +2,7 @@
 
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-02-27
+Fabian Ehrentraud, 2011-03-02
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -227,6 +227,12 @@ h2, h3, h4, #meta .list-header {
 	padding-left: 0.5em;
 }
 
+.semester_suggestions {
+	color: #DDD;
+	font-style: italic;
+	font-size: 90%;
+}
+
 /*hidden elements (element bodies)
 hidden is an html5 attribute that should not need css hiding, but it does not work yet in all browsers*/
 *[data-hide~="true"], *[hidden="hidden"] {
@@ -403,6 +409,11 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 		padding-left: 0em;
 	}
 	
+	.semester_suggestions {
+		color: #333;
+	}
+
+	
 	*[data-hide~="true"] {
 		/*display: inherit !important; this would display the whole expanded structure in printing, regardless of the collapse state*/
 	}
@@ -425,5 +436,10 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 	.lvas {
 		page-break-before: avoid;
 		page-break-inside: avoid;
+	}
+	
+	#content[data-hideheaders~="true"] [data-name~="wholemodulgruppe"]+[data-name~="wholemodulgruppe"] {
+		margin-top: 0.7em;
+		border-top: 2px #CCC solid;
 	}
 }
