--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -2,7 +2,7 @@
 
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-03-02
+Fabian Ehrentraud, 2011-03-03
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -57,7 +57,7 @@ h2 {
 }
 
 h3 {
-	color: #EEE;
+	color: white;
 	font-size: 1.25em;
 	background-color: #5D5;
 	margin: 0;
