--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -2,7 +2,7 @@
 
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-03-03
+Fabian Ehrentraud, 2011-03-06
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -303,7 +303,7 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 	color: maroon;
 }
 
-.currentlva {
+.currentlva, .highlightSem {
 	background-color: #c0e607;
 }
 
