highlight wrong calculated ects in wahlmodulgruppe which aren't calculated with factor 1.5 from sws

--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -375,6 +375,9 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 	text-align: right;
 	width: 10em;
 }
+.ects_incorrect {
+	color: red;
+}
 .lvas table .lvainfo {
 	/*width: 12em;*/
 	max-width: 24em;
