--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -115,7 +115,7 @@ li {
 #meta .meta-nonprint {
 	float: right;
 	color: #877;
-	font-size: 50%;
+	font-size: 0.8em;
 	font-style: italic;
 	cursor: pointer;
 }
