--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -2,7 +2,7 @@
 
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-10-24
+Fabian Ehrentraud, 2011-10-26
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -120,7 +120,7 @@ li {
 	cursor: pointer;
 }
 
-*[data-noPrint~="true"] .hideWhenNonprint {
+*[data-no_print~="true"] .hideWhenNonprint {
 	display: none;
 }
 
@@ -388,7 +388,7 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 	margin: 0;
 }
 
-*[data-noPrint~="true"] {
+*[data-no_print~="true"] {
 	opacity: 0.6; /*this is CSS3, supported by Opera, Firefox, Chrome and Safari*/
 }
 
@@ -466,7 +466,7 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 		content: "";
 	}
 	
-	*[data-noPrint~="true"], #meta .meta-nonprint, #meta .controls, #footer {
+	*[data-no_print~="true"], #meta .meta-nonprint, #meta .controls, #footer {
 		display: none;
 	}
 	
