--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -2,7 +2,7 @@
 
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2011-10-26
+Fabian Ehrentraud, 2011-10-27
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -220,6 +220,10 @@ h2, h3, h4, #meta .list-header {
 
 #meta [data-clickable~="true"] {
 	cursor: pointer;	
+}
+
+#meta .multirow {
+	vertical-align: middle;
 }
 
 .contentwide {
