--- a/informatikdidaktik.css
+++ b/informatikdidaktik.css
@@ -2,7 +2,7 @@
 
 /* informatikdidaktik.css */
 /*
-Fabian Ehrentraud, 2012-03-10
+Fabian Ehrentraud, 2012-03-19
 e0725639@mail.student.tuwien.ac.at
 https://github.com/fabb/Informatikdidaktik-Studienplan-Scraping
 Licensed under the Open Software License (OSL 3.0)
@@ -78,7 +78,7 @@ h4 {
 
 h5 {
 	color: #990;
-	font-size: 1.1em;
+	font-size: 1.05em;
 	margin: 0.1em;
 	margin-top: 0.2em;
 	padding: 0.1em;
@@ -454,6 +454,9 @@ hidden is an html5 attribute that should not need css hiding, but it does not wo
 	}
 	h3 {
 		padding-left: 0.3em;
+	}
+	h4 {
+		padding-left: 0.6em;
 	}
 	
 	a {
